feat: error handling and url as argument

--- a/.github/workflows/ai-review-caller.yml
+++ b/.github/workflows/ai-review-caller.yml
@@ -10,8 +10,6 @@ on:
 jobs:
   generate-diff:
     runs-on: ubuntu-latest
-    outputs:
-      diff: ${{ steps.diff.outputs.diff }}
     steps:
       - name: 1. Checkout repository
         uses: actions/checkout@v4
@@ -19,16 +17,15 @@ jobs:
           # Fetch all history for all branches and tags
           fetch-depth: 0
 
-      - name: 2. Generate diff
-        id: diff
+      - name: 2. Generate and Upload Diff as Artifact
         run: |
           git fetch origin ${{ github.event.pull_request.base.sha }}
           git fetch origin ${{ github.event.pull_request.head.sha }}
-          # Use a HEREDOC to handle multi-line diff output
-          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          echo "diff<<$EOF" >> $GITHUB_OUTPUT
-          git diff ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} >> $GITHUB_OUTPUT
-          echo "$EOF" >> $GITHUB_OUTPUT
+          git diff ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} > code.diff
+      - uses: actions/upload-artifact@v4
+        with:
+          name: code-diff-artifact
+          path: code.diff
 
   trigger-review:
     needs: generate-diff
@@ -37,5 +34,4 @@ jobs:
       pull-requests: write
     with:
       pr_number: ${{ github.event.pull_request.number }}
-      code_diff: ${{ needs.generate-diff.outputs.diff }}
     secrets: inherit
