--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
 # action.yml
+
 name: 'Code-Turtle AI Code Review'
 description: 'An AI-powered code reviewer that analyzes pull requests and provides feedback.'
 author: 'Richard Joseph'
@@ -14,7 +15,10 @@ inputs:
   github_token:
     description: 'The GitHub token for posting comments.'
     required: true
-    default: ${{ github.token }}
+
+  repository:
+    description: 'The owner and repository name (e.g., octocat/Hello-World).'
+    required: true
 
 runs:
   using: 'docker'
@@ -23,7 +27,7 @@ runs:
     MODEL_URL: ${{ inputs.model_url }}
     GITHUB_TOKEN: ${{ inputs.github_token }}
     PR_NUMBER: ${{ inputs.pr_number }}
-    GH_REPO: ${{ github.repository }}
+    GH_REPO: ${{ inputs.repository }}
   entrypoint: '/bin/bash'
   args:
     - -c
