--- a/action.yml
+++ b/action.yml
@@ -15,14 +15,14 @@ inputs:
   github_token:
     description: 'The GitHub token for posting comments.'
     required: true
-
   repository:
     description: 'The owner and repository name (e.g., octocat/Hello-World).'
     required: true
 
 runs:
   using: 'docker'
-  image: 'ghcr.io/richard-m-j/llama.cpp:light'
+  # Add the 'docker://' prefix to the image name
+  image: 'docker://ghcr.io/richard-m-j/llama.cpp:light'
   env:
     MODEL_URL: ${{ inputs.model_url }}
     GITHUB_TOKEN: ${{ inputs.github_token }}
