--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,15 +1,3 @@
-# scripts/requirements.txt
-
-# Vector Database Client (using Pinecone as an example)
-pinecone-client
-
-# Core library for document loading and splitting
-langchain
-langchain-community
-
-# For generating high-quality sentence/code embeddings
-# scripts/requirements.txt
-
 # Vector Database Client (using Pinecone as an example)
 pinecone-client
 
@@ -22,8 +10,7 @@ sentence-transformers
 
 # For language-aware code splitting
 tree-sitter
-- tree-sitter-languages
-+ tree-sitter-languages[python,javascript,go,typescript]
+tree-sitter-languages[python,javascript,go,typescript]
 
 # Utility for handling environment variables during local development
 python-dotenv
