--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,17 +1,9 @@
-# Vector Database Client (using Pinecone as an example)
 pinecone
-
-# Core library for document loading and splitting
 langchain
 langchain-community
-
-# For generating high-quality sentence/code embeddings
 sentence-transformers
-
-# For language-aware code splitting
 tree-sitter
 tree-sitter-languages[python,javascript,go,typescript]
-
-# Utility for handling environment variables during local development
 python-dotenv
 tqdm
+boto3
