--- a/.github/workflows/indexer.yml
+++ b/.github/workflows/indexer.yml
@@ -1,7 +1,10 @@
-name: Code-turtle Smart Indexing Agent
+name: Code-turtle Indexing Agent
 
 on:
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+  # Triggers the workflow on push events to the main branch
   push:
     branches:
       - main
@@ -13,67 +16,15 @@ jobs:
     steps:
       - name: 1. Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: 2. Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: 2. Build Docker Image
+        run: docker build -t code-turtle-indexer .
 
-      - name: 2. Identify Changed Files
-        id: changed_files
-        if: github.event_name == 'push'
+      - name: 3. Run Indexing Container
         run: |
-          echo "-> Comparing commits"
-          echo "Before SHA: ${{ github.event.before }}"
-          echo "Current SHA: ${{ github.sha }}"
-          echo "------------------------------------"
-          
-          git diff --name-status ${{ github.event.before }} ${{ github.sha }} -- > diff.txt
-          
-          echo "-> Raw git diff output (diff.txt):"
-          cat diff.txt
-          echo "------------------------------------"
-          
-          awk '$1 ~ /^[AM]/ {print $2}' diff.txt > files_to_upsert.txt
-          awk '$1 == "D" {print $2}' diff.txt > files_to_delete.txt
-          
-          echo "-> Files to Upsert:"
-          cat files_to_upsert.txt
-          echo "------------------------------------"
-          
-          echo "-> Files to Delete:"
-          cat files_to_delete.txt
-          echo "------------------------------------"
-
-      - name: 4. Build and Tag Docker Image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/code-turtle-indexer:latest \
-                       -t ${{ secrets.DOCKERHUB_USERNAME }}/code-turtle-indexer:${{ github.sha }} \
-                       .
-
-      - name: 5. Run Smart Indexing Container
-        run: |
-          DOCKER_OPTIONS="--rm \
+          docker run --rm \
             -e PINECONE_API_KEY=${{ secrets.VECTOR_DB_API_KEY }} \
             -e PINECONE_ENVIRONMENT=${{ secrets.VECTOR_DB_ENVIRONMENT }} \
-            -e SCAN_PATH='/source_code'"
-          
-          if [ "${{ github.event_name }}" == "push" ]; then
-            DOCKER_OPTIONS="$DOCKER_OPTIONS \
-              -e UPSERT_FILE_LIST='/source_code/files_to_upsert.txt' \
-              -e DELETE_FILE_LIST='/source_code/files_to_delete.txt'"
-          fi
-
-          DOCKER_OPTIONS="$DOCKER_OPTIONS \
-            -v ${{ github.workspace }}:/source_code"
-
-          docker run $DOCKER_OPTIONS ${{ secrets.DOCKERHUB_USERNAME }}/code-turtle-indexer:latest
-
-      - name: 6. Push Image to Docker Hub
-        # Only push if the event is a push to the 'main' branch
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: |
-          docker push --all-tags ${{ secrets.DOCKERHUB_USERNAME }}/code-turtle-indexer
+            -e SCAN_PATH="/source_code" \
+            -v ${{ github.workspace }}:/source_code \
+            code-turtle-indexer
