--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -5,42 +5,26 @@ on:
     types: [opened, reopened, synchronize]
 
 permissions:
-  pull-requests: write # Required to post comments on the PR
+  pull-requests: write
 
 jobs:
   code-review:
     runs-on: ubuntu-latest
-    
+    container:
+      image: ${{ secrets.DOCKERHUB_USERNAME }}/code-turtle-reviewer:latest
     steps:
       - name: 1. Checkout Repository
         uses: actions/checkout@v4
         with:
-          # Fetch full history to allow diffing between base and head
           fetch-depth: 0
 
-      - name: 2. Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: 3. Install Dependencies
-        run: pip install -r scripts/requirements.txt
-
-      - name: 4. Run the Review Workflow
+      - name: 2. Run the Review Workflow
         env:
-          # --- GitHub Context ---
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_EVENT_PATH: ${{ github.event_path }}
-          
-          # --- Vector DB Credentials ---
           PINECONE_API_KEY: ${{ secrets.VECTOR_DB_API_KEY }}
           PINECONE_ENVIRONMENT: ${{ secrets.VECTOR_DB_ENVIRONMENT }}
-          
-          # --- Web Search API Key (NEW) ---
           SERPAPI_API_KEY: ${{ secrets.SERPAPI_API_KEY }}
-          
-          # --- AWS Bedrock Credentials for LLM ---
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION_NAME: "us-east-1" # Or your preferred AWS region
-        run: python scripts/orchestrator.py
+          AWS_REGION_NAME: "us-east-1"
