--- a/.github/workflows/indexer.yml
+++ b/.github/workflows/indexer.yml
@@ -1,30 +1,18 @@
 name: Code-turtle Indexing Agent
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-  # Triggers the workflow on push events to the main branch
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Build and Push Docker Images"]
+    types:
+      - completed
 
 jobs:
-  build-run-and-push:
+  run-indexer:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: 1. Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: 2. Build Docker Image
-        run: docker build -t code-turtle-indexer .
-
-      - name: 3. Run Indexing Container
+      - name: Run Indexing Container
         run: |
           docker run --rm \
             -e PINECONE_API_KEY=${{ secrets.VECTOR_DB_API_KEY }} \
             -e PINECONE_ENVIRONMENT=${{ secrets.VECTOR_DB_ENVIRONMENT }} \
-            -e SCAN_PATH="/source_code" \
-            -v ${{ github.workspace }}:/source_code \
-            code-turtle-indexer
+            ${{ secrets.DOCKERHUB_USERNAME }}/code-turtle-indexer:latest
