--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -10,8 +10,15 @@ permissions:
 jobs:
   code-review:
     runs-on: ubuntu-latest
+    
+    # Define the full image name as a job-level environment variable
+    env:
+      REVIEWER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/code-turtle-reviewer:latest
+
+    # Use the environment variable to specify the container image
     container:
-      image: ${{ secrets.DOCKERHUB_USERNAME }}/code-turtle-reviewer:latest
+      image: ${{ env.REVIEWER_IMAGE }}
+
     steps:
       - name: 1. Checkout Repository
         uses: actions/checkout@v4
@@ -19,8 +26,6 @@ jobs:
           fetch-depth: 0
 
       - name: 2. Run the Review Workflow
-        # FIX: Added the 'run' keyword to execute the script.
-        # The script is located at /app, which is the WORKDIR in the Dockerfile.
         run: python /app/scripts/orchestrator.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
